--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -154,6 +154,8 @@ profile::jenkinscontroller::jcasc:
             - ubuntu
             - ubuntu-amd64-maven-11
             - ubuntu-22-amd64-maven-11
+            - maven-11
+            - jdk11
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
@@ -172,6 +174,8 @@ profile::jenkinscontroller::jcasc:
           labels:
             - ubuntu-amd64-maven-17
             - ubuntu-22-amd64-maven-17
+            - maven-17
+            - jdk17
           javaHome: '/opt/jdk-17'
           maxInstances: 10
           useAsMuchAsPossible: true
@@ -191,6 +195,8 @@ profile::jenkinscontroller::jcasc:
           labels:
             - ubuntu-amd64-maven-21
             - ubuntu-22-amd64-maven-21
+            - maven-21
+            - jdk21
           javaHome: '/opt/jdk-21'
           maxInstances: 10
           useAsMuchAsPossible: true
@@ -213,6 +219,8 @@ profile::jenkinscontroller::jcasc:
             - win-2019
             - windows-2019
             - win-2019-amd64-maven-11
+            - maven-windows
+            - maven-11-windows
           javaHome: 'C:/tools/jdk-11'
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
@@ -231,6 +239,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - win-2019-amd64-maven-17
+            - maven-17-windows
           javaHome: 'C:/tools/jdk-17'
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
@@ -249,6 +258,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - win-2019-amd64-maven-21
+            - maven-21-windows
           javaHome: 'C:/tools/jdk-21'
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
