--- a/hieradata/clients/controller.trusted.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.trusted.ci.jenkins.io.yaml
@@ -176,6 +176,8 @@ profile::jenkinscontroller::jcasc:
             - win-2019
             - windows-2019
             - win-2019-amd64-maven-11
+            - maven-windows
+            - maven-11-windows
           javaHome: 'C:/tools/jdk-11'
           maxInstances: 7
           useAsMuchAsPossible: true
@@ -194,6 +196,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - win-2019-amd64-maven-17
+            - maven-17-windows
           javaHome: 'C:/tools/jdk-17'
           maxInstances: 7
           useAsMuchAsPossible: true
@@ -212,6 +215,7 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - win-2019-amd64-maven-21
+            - maven-21-windows
           javaHome: 'C:/tools/jdk-21'
           maxInstances: 7
           useAsMuchAsPossible: true
